tests/gabc-dump/should-fail/unopened-under-ledger.gabc
name: unopened under-staff ledger line;
%%
(c4) g(g) h(h[ull:}])
